Use shorter placeholder IBAN
Fits inside input

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
         <form>
           <label id="ibanCodeLabel" for="ibanCode" title="IBAN Code">IBAN Code:</label>
-          <input id="ibanCode" placeholder="FR76 3000 6000 0112 3456 7890 189" disabled>
+          <input id="ibanCode" placeholder="BE71 0961 2345 6769" disabled>
           
           <label id="ibanCodesLabel" for="ibanCodes" title="IBAN Codes">IBAN Codes:</label>
           <textarea id="ibanCodes" rows="5" placeholder="CH56 0483 5012 3456 7800 9, BE71 0961 2345 6769" disabled></textarea>
