First working multi version
Also includes refactors for single mode

--- a/src/index.html
+++ b/src/index.html
@@ -52,11 +52,11 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-                <td id="singleIBAN"></td>
-                <td id="singleIsValid"></td>
-                <td id="singleCountry"></td>
-                <td id="singleError"></td>
+            <tr id="cloneThisForTable" name="tablerow">
+                <td id="IBAN"></td>
+                <td id="IsValid"></td>
+                <td id="Country"></td>
+                <td id="Error"></td>
             </tr>
           </tbody>
         </table>
