Change theme color
Grey is dull and safe

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="Description" content="IBAN Tester - Free, open, no ads and respects your privacy">
-    <meta name="theme-color" content="#5dadec"/>
+    <meta name="theme-color" content="#dddddd"/>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="mvp.css">
     <!--<link rel="manifest" href="manifest.webmanifest">
