Add details about IBAN tester
So people can read what the SPA does

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,14 @@
       <section>
         <header>
           <h1>IBAN Tester</h1>
+          <details>
+            <summary>What is this?</summary>
+            <p>IBAN Tester can be used to test if given <b>International Bank Account Number</b> (<a href="https://en.wikipedia.org/wiki/International_Bank_Account_Number">IBAN</a>) matches the specifications of <b>ISO 13616-2:2007</b> <br> <br>
+              IBAN Tester does <b>NOT</b> test if account really exists.
+            </p>
+          </details>
         </header>
-
+        
         <form>
           <label id="ibanCodeLabel" for="ibanCode" title="IBAN Code">IBAN Code:</label>
           <input id="ibanCode" placeholder="BE71 0961 2345 6769" disabled>
