Major refactor for supporting CSV part I
In case someone wants CSV output

--- a/src/index.html
+++ b/src/index.html
@@ -48,24 +48,34 @@
       <hr>
 
       <section>
-        <table>
-          <thead>
-            <tr>
-                <th>IBAN</th>
-                <th>Is valid</th>
-                <th>Country</th>
-                <th>Possible error</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr id="cloneThisForTable" name="tablerow">
-                <td id="IBAN"></td>
-                <td id="IsValid"></td>
-                <td id="Country"></td>
-                <td id="Error"></td>
-            </tr>
-          </tbody>
-        </table>
+        <p id="htmlselectedparent">
+          <small><b>HTML</b> / <a id="csvlink">CSV</a></small>
+          <br>
+          <table>
+            <thead>
+              <tr>
+                  <th>IBAN</th>
+                  <th>Is valid</th>
+                  <th>Country</th>
+                  <th>Possible error</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr id="cloneThisForTable" name="tablerow">
+                  <td id="IBAN"></td>
+                  <td id="IsValid"></td>
+                  <td id="Country"></td>
+                  <td id="Error"></td>
+              </tr>
+            </tbody>
+          </table>
+        </p>
+        <p id="csvselectedparent">
+          <small><a id="htmllink">HTML</a> / <b>CSV</b></small>
+          <br>
+          Text area here
+        </p>
+        
       </section>
 
     </main>
