Last part of CSV support refactor
CSV output is now officially supported

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,9 @@
         </header>
           <form>
             <label id="csvLabel" for="csv" title="CSV text">CSV text:</label>
-            <textarea id="csv" readonly></textarea>
+            <textarea id="csv" rows="5" readonly></textarea>
+            <button type="button" id="copycsv">Copy CSV ✂️</button>
+            <button type="button" id="savecsv">Save CSV 💾</button>
           </form>
       </section>
 
