Add missing integrate examples
In case someone wants to integrate

--- a/src/about.html
+++ b/src/about.html
@@ -55,7 +55,7 @@
       <section>
         <header>
             <h2>Integrate</h2>
-            <p>If you want to integrate IBAN Tester to your own system then just add iban URL parameters with single code or multiple codes that are separated with commas. e.g. </p>
+            <p>If you want to integrate IBAN Tester to your own system then just add iban URL parameters with single code or multiple codes that are separated with commas. e.g. <a href="https://iban.raiha.rocks/?iban=BE71096123456769">https://iban.raiha.rocks/?iban=BE71096123456769</a> or <a href="https://iban.raiha.rocks/?iban=BE71096123456769,ES7921000813610123456789">https://iban.raiha.rocks/?iban=BE71096123456769,ES7921000813610123456789</a></p>
         </header>
       </section>
 
