Move country localized name from Typescript to HTML
Easier for localizations

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,111 @@
         </small>
       </p>
     </footer>
+    <div id="countries" hidden>
+      <div id="Albania">Albania</div>
+      <div id="Algeria">Algeria</div>
+      <div id="Andorra">Andorra</div>
+      <div id="Angola">Angola</div>
+      <div id="Austria">Austria</div>
+      <div id="Azerbaijan">Azerbaijan</div>
+      <div id="Bahrain">Bahrain</div>
+      <div id="Belarus">Belarus</div>
+      <div id="Belgium">Belgium</div>
+      <div id="Benin">Benin</div>
+      <div id="BosniaAndHerzegovina">Bosnia and Herzegovina</div>
+      <div id="Brazil">Brazil</div>
+      <div id="BritishVirginIslands">British Virgin Islands</div>
+      <div id="Bulgaria">Bulgaria</div>
+      <div id="BurkinaFaso">Burkina Faso</div>
+      <div id="Burundi">Burundi</div>
+      <div id="Cameroon">Cameroon</div>
+      <div id="CapeVerde">Cape Verde</div>
+      <div id="CentralAfricanRepublic">Central African Republic</div>
+      <div id="Congo">Congo</div>
+      <div id="CostaRica">CostaRica</div>
+      <div id="Croatia">Croatia</div>
+      <div id="Cyprus">Cyprus</div>
+      <div id="CzechRepublic">Czech Republic</div>
+      <div id="Denmark">Denmark</div>
+      <div id="DominicanRepublic">Dominican Republic</div>
+      <div id="Egypt">Egypt</div>
+      <div id="Estonia">Estonia</div>
+      <div id="FaroeIslands">Faroe Islands</div>
+      <div id="Finland">Finland</div>
+      <div id="France">France</div>
+      <div id="FrenchGuiana">French Guiana</div>
+      <div id="FrenchPolynesia">French Polynesia</div>
+      <div id="Gabon">Gabon</div>
+      <div id="Georgia">Georgia</div>
+      <div id="Germany">Germany</div>
+      <div id="Gibraltar">Gibraltar</div>
+      <div id="Greece">Greece</div>
+      <div id="Greenland">Greenland</div>
+      <div id="Guadeloupe">Guadeloupe</div>
+      <div id="Guatemala">Guatemala</div>
+      <div id="Guernsey">Guernsey</div>
+      <div id="Hungary">Hungary</div>
+      <div id="Iceland">Iceland</div>
+      <div id="Iran">Iran</div>
+      <div id="Iraq">Iraq</div>
+      <div id="Ireland">Ireland</div>
+      <div id="IsleOfMan">Isle of Man</div>
+      <div id="Israel">Israel</div>
+      <div id="Italy">Italy</div>
+      <div id="IvoryCoast">Ivory Coast</div>
+      <div id="Jersey">Jersey</div>
+      <div id="Jordan">Jordan</div>
+      <div id="Kazakhstan">Kazakhstan</div>
+      <div id="Kosovo">Kosovo</div>
+      <div id="Kuwait">Kuwait</div>
+      <div id="Latvia">Latvia</div>
+      <div id="Lebanon">Lebanon</div>
+      <div id="Liechtenstein">Liechtenstein</div>
+      <div id="Lithuania">Lithuania</div>
+      <div id="Luxembourg">Luxembourg</div>
+      <div id="NorthMacedonia">North Macedonia</div>
+      <div id="Madagascar">Madagascar</div>
+      <div id="Mali">Mali</div>
+      <div id="Malta">Malta</div>
+      <div id="Martinique">Martinique</div>
+      <div id="Mauritania">Mauritania</div>
+      <div id="Mauritius">Mauritius</div>
+      <div id="Moldova">Moldova</div>
+      <div id="Monaco">Monaco</div>
+      <div id="Montenegro">Montenegro</div>
+      <div id="Mozambique">Mozambique</div>
+      <div id="Netherlands">Netherlands</div>
+      <div id="NewCaledonia">New Caledonia</div>
+      <div id="Norway">Norway</div>
+      <div id="Pakistan">Pakistan</div>
+      <div id="Palestine">Palestine, State of</div>
+      <div id="Poland">Poland</div>
+      <div id="Portugal">Portugal</div>
+      <div id="Qatar">Qatar</div>
+      <div id="Réunion">Réunion</div>
+      <div id="Romania">Romania</div>
+      <div id="SaintLucia">Saint Lucia</div>
+      <div id="SaintPierreAndMiquelon">Saint-Pierre and Miquelon</div>
+      <div id="SanMarino">San Marino</div>
+      <div id="SaoTomeAndPrincipe">Sao Tome and Principe</div>
+      <div id="SaudiArabia">Saudi Arabia</div>
+      <div id="Senegal">Senegal</div>
+      <div id="Serbia">Serbia</div>
+      <div id="Seychelles">Seychelles</div>
+      <div id="Slovakia">Slovakia</div>
+      <div id="Slovenia">Slovenia</div>
+      <div id="Spain">Spain</div>
+      <div id="Sweden">Sweden</div>
+      <div id="Switzerland">Switzerland</div>
+      <div id="TimorLeste">Timor-Leste</div>
+      <div id="Tunisia">Tunisia</div>
+      <div id="Turkey">Turkey</div>
+      <div id="Ukraine">Ukraine</div>
+      <div id="UnitedArabEmirates">United Arab Emirates</div>
+      <div id="UnitedKingdom">United Kingdom</div>
+      <div id="VaticanCityState">Vatican City State</div>
+      <div id="WallisAndFutuna">Wallis and Futuna</div>
+    </div>
   </body>
   <script type="module" src="index.js"></script>
 </html>
