Add a bit hacky show country emoji flag option
Needs some improvements

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,9 @@
           <p id="multimodeselectedparent">
             <small><a id="singlemodelink">Single</a> / <b>Multi</b></small>
           </p>
+
+          <input type="checkbox" id="showFlags">
+          <label for="showFlags" title="Show emoji flags if your platform supports them">Show country flags</label>
         </form>
         
       </section>
