Remove name from table row
It is not needed

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr id="cloneThisForTable" name="tablerow">
+              <tr id="cloneThisForTable">
                   <td id="IBAN"></td>
                   <td id="IsValid"></td>
                   <td id="Country"></td>
