Add service worker and manifest
To make this more an app

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <meta name="theme-color" content="#dddddd"/>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="mvp.css">
-    <!--<link rel="manifest" href="manifest.webmanifest">
-    <link rel="apple-touch-icon" href="icons-192_apple.png">-->
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="apple-touch-icon" href="icons-192_apple.png">
     <title>IBAN Tester - Free, open, no ads and respects your privacy</title>
   </head>
   <body>
