Add Facebook and Twitter meta
In case someone links the page

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Free, open, no ads and respects your privacy">
     <meta name="theme-color" content="#dddddd"/>
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://iban.raiha.rocks/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://iban.raiha.rocks/icons-192.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta property="twitter:domain" content="iban.raiha.rocks">
+    <meta property="twitter:url" content="https://iban.raiha.rocks/">
+    <meta name="twitter:image" content="https://iban.raiha.rocks/icons-192.png">
+
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="mvp.css">
     <link rel="manifest" href="manifest.webmanifest">
