Update about meta
Easier this way

--- a/src/about.html
+++ b/src/about.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="Description" content="IBAN Tester - About">
+    <meta name="description" content="IBAN Tester - About">
     <meta name="theme-color" content="#dddddd"/>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="mvp.css">
-    <title>IBAN Tester - Free, open, no ads and respects your privacy</title>
+    <title>IBAN Tester - About</title>
   </head>
   <body>
     <header>
